lexer-parser/java/parser.sparo/sparo_parserParser.java
// Generated from sparo_parser.g4 by ANTLR 4.7.1
package parser.sparo;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class sparo_parserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL_CONST=1, INT_CONST=2, FLOAT_CONST=3, STR_CONST=4, STR_NULL=5, STR_ERR_UNT=6, 
		STR_ERR_EOF=7, LPAREN=8, RPAREN=9, COLON=10, AT=11, PERCENT=12, SEMICOLON=13, 
		COMMA=14, PLUS=15, MINUS=16, STAR=17, SLASH=18, LT=19, GT=20, EQUALS=21, 
		LBRACE=22, RBRACE=23, LSQUARE=24, RSQUARE=25, DOT=26, LTE=27, GTE=28, 
		DOUBLE_EQUALS=29, CLASS=30, ELSE=31, IF=32, EXTENDS=33, AFTER=34, UNIQUE=35, 
		SHARED=36, WEAK=37, CONSTRUCT=38, DESTRUCT=39, THIS=40, NULLPTR=41, WHILE=42, 
		FOR=43, BREAK=44, NEW=45, AND=46, OR=47, NOT=48, NEW_UNIQUE=49, NEW_SHARED=50, 
		VOID=51, RETURN=52, INT=53, FLOAT=54, BOOL=55, STRING=56, ARRAY=57, TENSOR=58, 
		OBJECTID=59, TYPEID=60, WS=61, SINGLE_COMMENT=62, UNMATCH_COM=63, EOF_COM=64, 
		MULTI_COMMENT=65, UNKNOWN=66, STRING_CONST=67;
	public static final int
		RULE_program = 0, RULE_class_definition_list = 1, RULE_class_definition = 2, 
		RULE_class_head = 3, RULE_base_clause = 4, RULE_member_list = 5, RULE_member = 6, 
		RULE_destructor = 7, RULE_constructor = 8, RULE_method_definition = 9, 
		RULE_parameter_declaration_list = 10, RULE_parameter_declaration = 11, 
		RULE_statement = 12, RULE_declaration = 13, RULE_declaration_specifier = 14, 
		RULE_type_specifier = 15, RULE_array_specifier = 16, RULE_tensor_specifier = 17, 
		RULE_integer_constant_list = 18, RULE_pointer_type = 19, RULE_init_declarator = 20, 
		RULE_expression_statement = 21, RULE_expression_list = 22, RULE_expression = 23, 
		RULE_assignment_expression = 24, RULE_logical_OR_expression = 25, RULE_logical_AND_expression = 26, 
		RULE_equality_expression = 27, RULE_relational_expression = 28, RULE_additive_expression = 29, 
		RULE_multiplicative_expression = 30, RULE_unary_expression = 31, RULE_unary_operator = 32, 
		RULE_new_expression = 33, RULE_new_keyword = 34, RULE_postfix_expression = 35, 
		RULE_primary_expression = 36, RULE_constant = 37, RULE_compound_statement = 38, 
		RULE_statement_list = 39, RULE_selection_statement = 40, RULE_iteration_statement = 41, 
		RULE_jump_statement = 42;
	public static final String[] ruleNames = {
		"program", "class_definition_list", "class_definition", "class_head", 
		"base_clause", "member_list", "member", "destructor", "constructor", "method_definition", 
		"parameter_declaration_list", "parameter_declaration", "statement", "declaration", 
		"declaration_specifier", "type_specifier", "array_specifier", "tensor_specifier", 
		"integer_constant_list", "pointer_type", "init_declarator", "expression_statement", 
		"expression_list", "expression", "assignment_expression", "logical_OR_expression", 
		"logical_AND_expression", "equality_expression", "relational_expression", 
		"additive_expression", "multiplicative_expression", "unary_expression", 
		"unary_operator", "new_expression", "new_keyword", "postfix_expression", 
		"primary_expression", "constant", "compound_statement", "statement_list", 
		"selection_statement", "iteration_statement", "jump_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, "'('", "')'", "':'", "'@'", 
		"'%'", "';'", "','", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'='", 
		"'{'", "'}'", "'['", "']'", "'.'", "'<='", "'>='", "'=='", "'class'", 
		"'else'", "'if'", "'extends'", "'after'", "'unique'", "'shared'", "'weak'", 
		"'construct'", "'destruct'", "'this'", "'nullptr'", "'while'", "'for'", 
		"'break'", "'new'", "'and'", "'or'", "'not'", "'new_unique'", "'new_shared'", 
		"'void'", "'return'", "'Int'", "'Float'", "'Bool'", "'String'", "'Array'", 
		"'Tensor'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BOOL_CONST", "INT_CONST", "FLOAT_CONST", "STR_CONST", "STR_NULL", 
		"STR_ERR_UNT", "STR_ERR_EOF", "LPAREN", "RPAREN", "COLON", "AT", "PERCENT", 
		"SEMICOLON", "COMMA", "PLUS", "MINUS", "STAR", "SLASH", "LT", "GT", "EQUALS", 
		"LBRACE", "RBRACE", "LSQUARE", "RSQUARE", "DOT", "LTE", "GTE", "DOUBLE_EQUALS", 
		"CLASS", "ELSE", "IF", "EXTENDS", "AFTER", "UNIQUE", "SHARED", "WEAK", 
		"CONSTRUCT", "DESTRUCT", "THIS", "NULLPTR", "WHILE", "FOR", "BREAK", "NEW", 
		"AND", "OR", "NOT", "NEW_UNIQUE", "NEW_SHARED", "VOID", "RETURN", "INT", 
		"FLOAT", "BOOL", "STRING", "ARRAY", "TENSOR", "OBJECTID", "TYPEID", "WS", 
		"SINGLE_COMMENT", "UNMATCH_COM", "EOF_COM", "MULTI_COMMENT", "UNKNOWN", 
		"STRING_CONST"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "sparo_parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



		// Function to report errors.
		public void reportError(String errorString){
			setText(errorString);
			setType(ERROR);
		}

		// Function to process strings
		public void processString() {
			Token t = _factory.create(_tokenFactorySourcePair, _type, _text, _channel, _tokenStartCharIndex, getCharIndex()-1, _tokenStartLine, _tokenStartCharPositionInLine);
			String text = t.getText();

			//write your code to test strings here

			if (text.charAt(0) == '\n')
			{
				reportError("Unterminated string constant");
				return;
			}

			String temp = "";
			for(int i = 0; i < text.length(); i++)
			{
				char c0 = text.charAt(i);
				if (c0 == '\\' && i < text.length() - 1)
				{
					char c1 = text.charAt(i+1);
					if (c1 == 'b')
						temp += '\b';
					else if (c1 == 't')
						temp += "\t";
					else if (c1 == 'f')
						temp += '\f';
					else if (c1 == 'n')
						temp += '\n';
					else if (c1 == '"')
						temp += '\"';
					else if (c1 == '\\')
						temp += '\\';
					else
						temp += c1;
					i++;
				}
				else
					temp += c0;
			}

			if (temp.length() > 1024)
			{
				reportError("String constant too long");
				return;
			}
			else
			{
				setText(temp);
				return;
			}
		}


		public void unk_token() {
			Token t = _factory.create(_tokenFactorySourcePair, _type, _text, _channel, _tokenStartCharIndex, getCharIndex()-1, _tokenStartLine, _tokenStartCharPositionInLine);
			String text = t.getText();

			reportError(text);
		}

	public sparo_parserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Class_definition_listContext class_definition_list() {
			return getRuleContext(Class_definition_listContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CLASS) {
				{
				setState(86);
				class_definition_list(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_definition_listContext extends ParserRuleContext {
		public Class_definitionContext class_definition() {
			return getRuleContext(Class_definitionContext.class,0);
		}
		public Class_definition_listContext class_definition_list() {
			return getRuleContext(Class_definition_listContext.class,0);
		}
		public Class_definition_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitClass_definition_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_definition_listContext class_definition_list() throws RecognitionException {
		return class_definition_list(0);
	}

	private Class_definition_listContext class_definition_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Class_definition_listContext _localctx = new Class_definition_listContext(_ctx, _parentState);
		Class_definition_listContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_class_definition_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(90);
			class_definition();
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Class_definition_listContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_class_definition_list);
					setState(92);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(93);
					class_definition();
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Class_definitionContext extends ParserRuleContext {
		public Class_headContext class_head() {
			return getRuleContext(Class_headContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(sparo_parserParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(sparo_parserParser.RBRACE, 0); }
		public TerminalNode SEMICOLON() { return getToken(sparo_parserParser.SEMICOLON, 0); }
		public Member_listContext member_list() {
			return getRuleContext(Member_listContext.class,0);
		}
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitClass_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			class_head();
			setState(100);
			match(LBRACE);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNIQUE) | (1L << SHARED) | (1L << WEAK) | (1L << CONSTRUCT) | (1L << DESTRUCT) | (1L << INT) | (1L << FLOAT) | (1L << BOOL) | (1L << STRING) | (1L << ARRAY) | (1L << TENSOR) | (1L << TYPEID))) != 0)) {
				{
				setState(101);
				member_list(0);
				}
			}

			setState(104);
			match(RBRACE);
			setState(105);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_headContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(sparo_parserParser.CLASS, 0); }
		public TerminalNode TYPEID() { return getToken(sparo_parserParser.TYPEID, 0); }
		public Base_clauseContext base_clause() {
			return getRuleContext(Base_clauseContext.class,0);
		}
		public Class_headContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_head; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitClass_head(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_headContext class_head() throws RecognitionException {
		Class_headContext _localctx = new Class_headContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_head);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(CLASS);
			setState(108);
			match(TYPEID);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(109);
				base_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Base_clauseContext extends ParserRuleContext {
		public TerminalNode EXTENDS() { return getToken(sparo_parserParser.EXTENDS, 0); }
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public Base_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base_clause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitBase_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Base_clauseContext base_clause() throws RecognitionException {
		Base_clauseContext _localctx = new Base_clauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_base_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(EXTENDS);
			setState(113);
			type_specifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Member_listContext extends ParserRuleContext {
		public MemberContext member() {
			return getRuleContext(MemberContext.class,0);
		}
		public Member_listContext member_list() {
			return getRuleContext(Member_listContext.class,0);
		}
		public Member_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitMember_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Member_listContext member_list() throws RecognitionException {
		return member_list(0);
	}

	private Member_listContext member_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Member_listContext _localctx = new Member_listContext(_ctx, _parentState);
		Member_listContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_member_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(116);
			member();
			}
			_ctx.stop = _input.LT(-1);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Member_listContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_member_list);
					setState(118);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(119);
					member();
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MemberContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public DestructorContext destructor() {
			return getRuleContext(DestructorContext.class,0);
		}
		public Method_definitionContext method_definition() {
			return getRuleContext(Method_definitionContext.class,0);
		}
		public MemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MemberContext member() throws RecognitionException {
		MemberContext _localctx = new MemberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_member);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				constructor();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				destructor();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				method_definition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DestructorContext extends ParserRuleContext {
		public TerminalNode DESTRUCT() { return getToken(sparo_parserParser.DESTRUCT, 0); }
		public TerminalNode LPAREN() { return getToken(sparo_parserParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(sparo_parserParser.RPAREN, 0); }
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public DestructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destructor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitDestructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DestructorContext destructor() throws RecognitionException {
		DestructorContext _localctx = new DestructorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_destructor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(DESTRUCT);
			setState(132);
			match(LPAREN);
			setState(133);
			match(RPAREN);
			setState(134);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode CONSTRUCT() { return getToken(sparo_parserParser.CONSTRUCT, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(sparo_parserParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(sparo_parserParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(sparo_parserParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(sparo_parserParser.RPAREN, i);
		}
		public TerminalNode AFTER() { return getToken(sparo_parserParser.AFTER, 0); }
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Parameter_declaration_listContext parameter_declaration_list() {
			return getRuleContext(Parameter_declaration_listContext.class,0);
		}
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(CONSTRUCT);
			setState(137);
			match(LPAREN);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNIQUE) | (1L << SHARED) | (1L << WEAK) | (1L << INT) | (1L << FLOAT) | (1L << BOOL) | (1L << STRING) | (1L << ARRAY) | (1L << TENSOR) | (1L << TYPEID))) != 0)) {
				{
				setState(138);
				parameter_declaration_list(0);
				}
			}

			setState(141);
			match(RPAREN);
			setState(142);
			match(AFTER);
			setState(143);
			match(LPAREN);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL_CONST) | (1L << INT_CONST) | (1L << FLOAT_CONST) | (1L << LPAREN) | (1L << MINUS) | (1L << THIS) | (1L << NULLPTR) | (1L << NOT) | (1L << NEW_UNIQUE) | (1L << NEW_SHARED) | (1L << OBJECTID))) != 0) || _la==STRING_CONST) {
				{
				setState(144);
				expression_list(0);
				}
			}

			setState(147);
			match(RPAREN);
			setState(148);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_definitionContext extends ParserRuleContext {
		public Declaration_specifierContext declaration_specifier() {
			return getRuleContext(Declaration_specifierContext.class,0);
		}
		public TerminalNode OBJECTID() { return getToken(sparo_parserParser.OBJECTID, 0); }
		public TerminalNode LPAREN() { return getToken(sparo_parserParser.LPAREN, 0); }
		public Parameter_declaration_listContext parameter_declaration_list() {
			return getRuleContext(Parameter_declaration_listContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(sparo_parserParser.RPAREN, 0); }
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Method_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitMethod_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Method_definitionContext method_definition() throws RecognitionException {
		Method_definitionContext _localctx = new Method_definitionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_method_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			declaration_specifier();
			setState(151);
			match(OBJECTID);
			setState(152);
			match(LPAREN);
			setState(153);
			parameter_declaration_list(0);
			setState(154);
			match(RPAREN);
			setState(155);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_declaration_listContext extends ParserRuleContext {
		public Parameter_declarationContext parameter_declaration() {
			return getRuleContext(Parameter_declarationContext.class,0);
		}
		public Parameter_declaration_listContext parameter_declaration_list() {
			return getRuleContext(Parameter_declaration_listContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(sparo_parserParser.COMMA, 0); }
		public Parameter_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_declaration_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof sparo_parserVisitor ) return ((sparo_parserVisitor<? extends T>)visitor).visitParameter_declaration_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parameter_declaration_listContext parameter_declaration_list() throws RecognitionException {
		return parameter_declaration_list(0);
	}
